# label-studio-converter

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
label_studio_converter/: errors.py  utils.py
ls_converter/: __init__.py  errors.py  meta.py  utils.py
tests/: test_label_studio_converter.py
